Added basic liq data to package.json

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Liquid-Labs/liq-core/issues"
   },
-  "homepage": "https://github.com/Liquid-Labs/liq-core#readme"
+  "homepage": "https://github.com/Liquid-Labs/liq-core#readme",
+  "liq": {
+    "orgBase": "git@github.com:Liquid-Labs/Liquid-Labs.git"
+  }
 }
