stub in express setup

--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "homepage": "https://github.com/Liquid-Labs/liq-core#readme",
   "liq": {
     "orgBase": "git@github.com:Liquid-Labs/Liquid-Labs.git"
+  },
+  "devDependencies": {
+    "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.44"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4"
   }
 }
