--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "make",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "JS_SRC=src/lib catalyst-scripts test",
     "postversion": "git push upstream v${npm_package_version}"
   },
   "keywords": [],
