--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "make",
+    "lint": "make lint",
+    "lint:fix": "make lint-fix",
     "test": "make test",
     "postversion": "git push upstream v${npm_package_version}"
   },
