--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "make lint",
     "lint:fix": "make lint-fix",
     "test": "make test",
+    "preversion": "make test && make lint",
     "postversion": "git push upstream v${npm_package_version}"
   },
   "keywords": [],
