added bash-rollup and bash-toolkit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "orgBase": "git@github.com:Liquid-Labs/Liquid-Labs.git"
   },
   "devDependencies": {
+    "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
+    "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.44",
     "supertest": "^6.1.6"
   },
