--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.44",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.48",
     "supertest": "^6.1.6"
   },
   "dependencies": {
