--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "@fast-csv/parse": "^4.3.6",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
