--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.50",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.56",
+    "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
     "lodash": "^4.17.21",
     "supertest": "^6.1.6"
   },
@@ -42,8 +42,5 @@
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
     "resolve": "^1.20.0"
-  },
-  "optionalDependencies": {
-    "@liquid-labs/liq-audits": "file:.yalc/@liquid-labs/liq-audits"
   }
 }
