--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@fast-csv/parse": "^4.3.6",
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
-    "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.50",
+    "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.51",
     "@liquid-labs/orgs-model": "^1.0.0-beta.68",
+    "cli-color": "^2.0.1",
     "lodash": "^4.17.21",
     "supertest": "^6.1.6"
   },
