--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@liquid-labs/liq-core",
   "version": "1.0.0-alpha.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/liq-server.js",
+  "type": "module",
   "scripts": {
     "build": "make",
     "lint": "make lint",
@@ -31,13 +32,14 @@
     "@fast-csv/parse": "^4.3.6",
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
-    "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.51",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.68",
-    "cli-color": "^2.0.1",
-    "lodash": "^4.17.21",
+    "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.52",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.70",
+    "lodash.kebabcase": "^4.1.1",
+    "path-to-regexp": "^6.2.0",
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "chalk": "^5.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
