--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.52",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.70",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.71",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.pickby": "^4.6.0",
     "path-to-regexp": "^6.2.0",
     "supertest": "^6.1.6"
   },
@@ -44,6 +45,7 @@
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
+    "json-diff": "^0.7.1",
     "resolve": "^1.20.0"
   }
 }
