sketched in support for multi-file reports

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@liquid-labs/md2x": "^1.0.0-alpha.2",
+    "adm-zip": "^0.5.9",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
