--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.53",
     "@liquid-labs/orgs-model": "^1.0.0-beta.76",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "lodash.pickby": "^4.6.0",
     "path-to-regexp": "^6.2.0",
     "supertest": "^6.1.6"
@@ -45,6 +47,7 @@
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
+    "js-convert-case": "^4.2.0",
     "json-diff": "^0.7.1",
     "resolve": "^1.20.0",
     "shelljs": "^0.8.5"
