--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preversion": "make test && make lint",
     "postversion": "git push upstream v${npm_package_version}"
   },
+  "files": [ "./dist" ],
   "keywords": [],
   "author": "Zane Rockenbaugh <zane@liquid-labs.com>",
   "license": "UNLICENSED",
