--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.53",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.76",
+    "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
@@ -47,8 +47,8 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
-    "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.2",
-    "@liquid-labs/md2x": "^1.0.0-alpha.3",
+    "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
+    "@liquid-labs/md2x": "^1.0.0-alpha.4",
     "adm-zip": "^0.5.9",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
