upgrade to express 5-beta to solve path problems

--- a/package.json
+++ b/package.json
@@ -50,13 +50,11 @@
     "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
     "@liquid-labs/md2x": "^1.0.0-alpha.4",
     "adm-zip": "^0.5.9",
-    "express": "^4.17.1",
+    "express": "^5.0.0-beta.1",
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
-    "js-convert-case": "^4.2.0",
     "json-diff": "^0.7.1",
-    "resolve": "^1.20.0",
-    "shelljs": "^0.8.5"
+    "resolve": "^1.20.0"
   }
 }
