specify supported node engines

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "files": [
     "./dist"
   ],
+  "engines": {
+    "node": ">=17.0.0"
+  },
   "keywords": [],
   "author": "Zane Rockenbaugh <zane@liquid-labs.com>",
   "license": "UNLICENSED",
