--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.54",
+    "@liquid-labs/import-export": "^1.0.0-alpha.1",
     "@liquid-labs/orgs-model": "^1.0.0-beta.89",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
