--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.54",
-    "@liquid-labs/import-export": "^1.0.0-alpha.1",
     "@liquid-labs/orgs-model": "^1.0.0-beta.89",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
@@ -51,6 +50,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "@liquid-labs/import-export": "^1.0.0-alpha.3",
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.6",
     "@liquid-labs/md2x": "^1.0.0-alpha.6",
     "adm-zip": "^0.5.9",
@@ -58,7 +58,8 @@
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
-    "json-diff": "^0.7.1",
+    "js-yaml": "^4.1.0",
+    "json-diff": "^0.9.0",
     "resolve": "^1.20.0"
   }
 }
