--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.54",
     "@liquid-labs/orgs-model": "^1.0.0-beta.90",
+    "chalk": "^4.1.2",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
