--- a/package.json
+++ b/package.json
@@ -41,18 +41,16 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.54",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.90",
+    "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
     "chalk": "^4.1.2",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
-    "lodash.pick": "^4.4.0",
-    "lodash.pickby": "^4.6.0",
     "path-to-regexp": "^6.2.0",
     "supertest": "^6.1.6"
   },
   "dependencies": {
-    "@liquid-labs/import-export": "^1.0.0-alpha.3",
-    "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.6",
+    "@liquid-labs/import-export": "file:.yalc/@liquid-labs/import-export",
+    "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
     "@liquid-labs/md2x": "^1.0.0-alpha.6",
     "adm-zip": "^0.5.9",
     "express": "^5.0.0-beta.1",
