need to use explicit import for structuredClone

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
     "chalk": "^4.1.2",
+    "core-js-pure": "^3.25.5",
     "lodash.kebabcase": "^4.1.1",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
