--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "@liquid-labs/federated-json": "^1.0.0-alpha.24",
     "@liquid-labs/import-export": "file:.yalc/@liquid-labs/import-export",
     "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
     "@liquid-labs/md2x": "^1.0.0-alpha.8",
@@ -63,6 +64,7 @@
     "find-plugins": "^1.1.7",
     "js-yaml": "^4.1.0",
     "json-diff": "^0.9.0",
-    "resolve": "^1.20.0"
+    "resolve": "^1.20.0",
+    "shelljs": "^0.8.5"
   }
 }
