--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
-    "@liquid-labs/federated-json": "^1.0.0-alpha.24",
+    "@liquid-labs/federated-json": "file:.yalc/@liquid-labs/federated-json",
     "@liquid-labs/import-export": "file:.yalc/@liquid-labs/import-export",
     "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
     "@liquid-labs/md2x": "^1.0.0-alpha.8",
