--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@liquid-labs/bash-rollup": "^1.0.0-alpha.6",
     "@liquid-labs/bash-toolkit": "^1.0.0-alpha.57",
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.57",
+    "@liquid-labs/http-smart-response": "^1.0.0-alpha.3",
     "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
     "@liquid-labs/regex-repo": "^1.0.0-alpha.6",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
@@ -57,6 +58,7 @@
     "@liquid-labs/federated-json": "^1.0.0-alpha.33",
     "@liquid-labs/github-toolkit": "file:.yalc/@liquid-labs/github-toolkit",
     "@liquid-labs/import-export": "file:.yalc/@liquid-labs/import-export",
+    "@liquid-labs/liq-credentials-db": "^1.0.0-alpha.2",
     "@liquid-labs/liq-handlers-lib": "file:.yalc/@liquid-labs/liq-handlers-lib",
     "@liquid-labs/md2x": "^1.0.0-alpha.9",
     "adm-zip": "^0.5.9",
