--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "make lint-fix",
     "test": "make test",
     "preversion": "make test && make lint",
-    "postversion": "git push upstream v${npm_package_version}"
+    "postversion": "git push upstream v${npm_package_version}",
+    "qa": "make test && make lint"
   },
   "bin": {
     "liq-server": "./dist/liq-server.sh"
