--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@liquid-labs/catalyst-scripts": "^1.0.0-alpha.57",
     "@liquid-labs/federated-json": "^1.0.0-alpha.33",
     "@liquid-labs/http-smart-response": "^1.0.0-alpha.3",
-    "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.95",
     "@liquid-labs/regex-repo": "^1.0.0-alpha.6",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
     "chalk": "^4.1.2",
@@ -56,8 +56,8 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
-    "@liquid-labs/github-toolkit": "file:.yalc/@liquid-labs/github-toolkit",
-    "@liquid-labs/import-export": "file:.yalc/@liquid-labs/import-export",
+    "@liquid-labs/github-toolkit": "^1.0.0-alpha.7",
+    "@liquid-labs/http-tabular-input": "^1.0.0-alpha.4",
     "@liquid-labs/liq-credentials-db": "^1.0.0-alpha.3",
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.13",
     "@liquid-labs/md2x": "^1.0.0-alpha.9",
