--- a/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
+++ b/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         node-version: [ 18.x, 19.x ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest, macos-latest ]
 
     steps:
       - uses: actions/checkout@v3
