--- a/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
+++ b/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
@@ -14,8 +14,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 18.x, 19.x, 20.x ]
-        os: [ ubuntu-latest, macos-latest ]
+#        node-version: [ 18.x, 19.x, 20.x ]
+        node-version: [ 20.x ]
+#        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest ]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,5 +26,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: TERM=xterm-256color LIQ_REGISTRIES=raw.githubusercontent.com/liquid-labs/liq-registry/main/registry.yaml npm run build --if-present
+      - run: TERM=xterm-256color npm run build --if-present
       - run: TERM=xterm-256color LIQ_REGISTRIES=raw.githubusercontent.com/liquid-labs/liq-registry/main/registry.yaml npm test
