--- a/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
+++ b/.github/workflows/liquid-labs-ci-unit-tests-for-node.yaml
@@ -14,10 +14,8 @@ jobs:
 
     strategy:
       matrix:
-#        node-version: [ 18.x, 19.x, 20.x ]
-        node-version: [ 20.x ]
-#        os: [ ubuntu-latest, macos-latest ]
-        os: [ ubuntu-latest ]
+        node-version: [ 18.x, 19.x, 20.x ]
+        os: [ ubuntu-latest, macos-latest ]
 
     steps:
       - uses: actions/checkout@v3
