update resource-model and orgs-model

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@liquid-labs/catalyst-scripts-node-project": "^1.0.0-alpha.15",
     "@liquid-labs/federated-json": "^1.0.0-alpha.33",
     "@liquid-labs/http-smart-response": "^1.0.0-alpha.3",
-    "@liquid-labs/orgs-model": "file:.yalc/@liquid-labs/orgs-model",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.103",
     "@liquid-labs/regex-repo": "^1.0.0-alpha.6",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
     "chalk": "^4.1.2",
@@ -62,7 +62,7 @@
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.13",
     "@liquid-labs/md2x": "^1.0.0-alpha.9",
     "@liquid-labs/question-and-answer": "^1.0.0-alpha.11",
-    "@liquid-labs/resource-model": "file:.yalc/@liquid-labs/resource-model",
+    "@liquid-labs/resource-model": "^1.0.0-alpha.6",
     "@liquid-labs/shell-toolkit": "^1.0.0-alpha.4",
     "adm-zip": "^0.5.9",
     "express": "^5.0.0-beta.1",
