--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@liquid-labs/catalyst-scripts-node-project": "^1.0.0-alpha.15",
     "@liquid-labs/federated-json": "^1.0.0-alpha.33",
     "@liquid-labs/http-smart-response": "^1.0.0-alpha.3",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.103",
+    "@liquid-labs/liq-defaults": "^1.0.0-alpha.1",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.104",
     "@liquid-labs/regex-repo": "^1.0.0-alpha.6",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
     "chalk": "^4.1.2",
