--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@liquid-labs/http-smart-response": "^1.0.0-alpha.3",
     "@liquid-labs/liq-defaults": "^1.0.0-alpha.1",
     "@liquid-labs/liq-test-lib": "^1.0.0-alpha.1",
-    "@liquid-labs/orgs-model": "^1.0.0-beta.106",
+    "@liquid-labs/orgs-model": "^1.0.0-beta.108",
     "@liquid-labs/regex-repo": "^1.0.0-alpha.6",
     "@liquid-labs/weak-cache": "^1.0.0-alpha.1",
     "chalk": "^4.1.2",
@@ -58,6 +58,7 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "@liquid-labs/dependency-runner": "^1.0.0-alpha.2",
     "@liquid-labs/github-toolkit": "^1.0.0-alpha.10",
     "@liquid-labs/http-tabular-input": "^1.0.0-alpha.5",
     "@liquid-labs/liq-credentials-db": "^1.0.0-alpha.3",
