--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "make lint",
     "lint:fix": "make lint-fix",
     "test": "make test",
+    "prepare": "make qa && make build",
     "preversion": "make test && make lint",
     "qa": "make qa"
   },
