added CredentialsDb instance to ext

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@liquid-labs/dependency-runner": "^1.0.0-alpha.8",
+    "@liquid-labs/liq-credentials-db": "^1.0.0-alpha.5",
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.15",
     "@liquid-labs/liq-plugins-lib": "^1.0.0-alpha.2",
     "@liquid-labs/question-and-answer": "^1.0.0-alpha.11",
