--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "@liquid-labs/dependency-runner": "^1.0.0-alpha.8",
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.15",
-    "@liquid-labs/liq-plugins-lib": "^1.0.0-alpha.6",
+    "@liquid-labs/liq-plugins-lib": "^1.0.0-alpha.8",
     "@liquid-labs/question-and-answer": "^1.0.0-alpha.12",
     "@liquid-labs/resource-model": "^1.0.0-alpha.8",
     "command-line-args": "^5.2.1",
@@ -55,6 +55,7 @@
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
     "find-root": "^1.1.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
