--- a/.github/workflows/ci-cd-unit-tests-node.yaml
+++ b/.github/workflows/ci-cd-unit-tests-node.yaml
@@ -24,5 +24,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: TERM=xterm-256color npm run build --if-present
-      - run: TERM=xterm-256color LIQ_REGISTRIES=raw.githubusercontent.com/liquid-labs/liq-registry/main/registry.yaml npm test
+      - run: npm run build --if-present
+      - run: npm test
