--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "qa": "make qa"
   },
   "files": [
-    "./dist"
+    "./dist",
+    "README.md"
   ],
   "engines": {
     "node": ">=18.0.0"
