added explicit deps for direct imported packages

--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
     "@liquid-labs/dependency-runner": "^1.0.0-alpha.8",
     "@liquid-labs/http-smart-response": "^1.0.0-alpha.6",
     "@liquid-labs/liq-handlers-lib": "^1.0.0-alpha.15",
+    "@liquid-labs/npm-toolkit": "^1.0.0-alpha.17",
     "@liquid-labs/plugable-defaults": "^1.0.0-alpha.4",
     "@liquid-labs/question-and-answer": "^1.0.0-alpha.14",
+    "@liquid-labs/shell-toolkit": "^1.0.0-alpha.10",
+    "dependency-graph": "^1.0.0",
     "express": "^5.0.0-beta.1",
     "express-fileupload": "^1.2.1",
     "find-plugins": "^1.1.7",
