--- a/package.json
+++ b/package.json
@@ -55,13 +55,10 @@
     "@liquid-labs/question-and-answer": "^1.0.0-alpha.14",
     "@liquid-labs/semver-plus": "^1.0.0-alpha.11",
     "@liquid-labs/shell-toolkit": "^1.0.0-alpha.10",
-    "dependency-graph": "^1.0.0",
     "express": "^5.0.0-beta.1",
     "express-fileupload": "^1.2.1",
-    "find-plugins": "^1.1.7",
     "find-root": "^1.1.0",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "tar": "^7.5.1"
+    "lodash": "^4.17.21"
   }
 }
